--- a/contact me.html
+++ b/contact me.html
@@ -12,7 +12,7 @@
   <p><em><strong>Phone Nu:- </strong></em>06301069818</p>
   <p><em>reddyprakash100@gmail.com</em></p>
   <hr size="2">
-  <form action="mailto:reddyprakash100@gmail.com" method="post" enctype="text/plain">
+    <form class="" action="index.html" method="post" >
     <label> Your Name :</label>
     <input type="text" name="YourName" value=""><br><br>
     <label>Your Email :</label>
