--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ June 2012 — May 2013
   </table>
 
 <hr size="3">
-<a href="C:\Users\Y B PRAKASH\Desktop\Web Development\HTML- Personal Site\contact me.html">Contact Info</a>
+<a href="contact me.html">Contact Info</a>
 </body>
 
 </html>
