--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <hr size="3">
   <table cellspacing="20">
     <tr>
-      <td><img src="images\prakash_yb1.jpeg" alt="Prakash Profile Picture"></td>
+      <td><img src="images\prakash_yb1.jpeg" alt="Prakash Profile Picture" style=" width: 250px; height: 250px;"></td>
       <td>
         <h1>Yanamal Bindu Prakash Reddy </h1>
         <h3> <em><strong>Student</strong></em> </h3><br><br>
