--- a/TECHNICAL SKILLS.html
+++ b/TECHNICAL SKILLS.html
@@ -8,7 +8,7 @@
     <h3><em>TECHNICAL SKILLS</em></h3>
     <ul>
       <li>
-        <p><em><strong>Programming Languages:-</strong></em> <i> C#, C, C++, Python,R-programming</i></p>
+        <p><em><strong>Programming Languages:-</strong></em> <i> C#, C, C++, Python,R-programming,SQL, MySQL,NumPy,Pandas</i></p>
       </li>
       <li>
         <p><em><strong>Operating System:-</strong></em> <i> Linux(Ubuntu), Windows, OS X</i></i></p>
